--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
   "main": "webview-bridge",
   "dependencies": {
     "invariant": "2.2.0",
-    "keymirror": "0.1.1"
+    "keymirror": "0.1.1",
+    "prop-types": "^15.5.10"
+  },
+  "devDependencies": {
+    "react": "^16.0.0-alpha.12",
+    "react-native": "^0.46.4"
   }
 }
